--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
 	name = Rodrigo Cordeiro
 	email = rodrigomendoncca@gmail.com
 
+	signingkey = 074C3810233C614E
 [alias]
 	# View abbreviated SHA, description, and history graph of the latest 20 commits.
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
@@ -15,9 +16,11 @@
 	aliases = config --get-regexp alias
 
 [branch]
+
 	# Show most recently changed branches first.
 	sort = -committerdate
 [color]
+
 	# Use colors in Git commands that are capable of colored output when
 	# outputting to the terminal. (This is the default setting in Git ≥ 1.8.4.)
 	ui = auto
@@ -35,3 +38,7 @@
 	autocorrect = 1
 [init]
 	defaultBranch = main
+[commit]
+	gpgsign = true
+[gpg]
+	program = C:\\Program Files (x86)\\Gpg4win\\..\\GnuPG\\bin\\gpg.exe
