[Skip ci] Multiple updates due to travel

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
+//registry.npmjs.org/:_authToken=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
+msvs_version=2017
 init.author.email=rodrigomendoncca@gmail.com
 init.author.name=Rodrigo Cordeiro
 init.author.url=https://rodcordeiro.com.br
