--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,8 @@
 //registry.npmjs.org/:_authToken=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
+
+# msbuild_path = "C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\MSBuild.exe"
 msvs_version=2017
+
 init.author.email=rodrigomendoncca@gmail.com
 init.author.name=Rodrigo Cordeiro
 init.author.url=https://rodcordeiro.com.br
