--- a/.gitconfig
+++ b/.gitconfig
@@ -4,10 +4,12 @@
   path = .gitconfig-rod
 [includeIf "gitdir:~/projetos/pda/"]
   path = .gitconfig-pda
-
+[safe]
+	directory = C:/Users/rodrigo/projetos/pda/Desktop.Etiquetas.Electron
 [alias]
 	# View abbreviated SHA, description, and history graph of the latest 20 commits.
 	l = log --pretty=oneline --decorate=auto -n 20 --graph --abbrev-commit
+	ld = log --pretty=format:'%C(cyan)%h%Creset %C(bold)%cr%Creset %Cgreen<%an>%Creset %s' --max-count=20 --graph
 	graph = log --graph  --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%x20(%ce)%n%x20%s%n"
 	last = log --name-status --diff-filter="ACDMRT" -1 -U
 	json = log --pretty=format:'{%n  \"commit\": \"%H\",%n  \"abbreviated_commit\": \"%h\",%n  \"tree\": \"%T\",%n  \"abbreviated_tree\": \"%t\",%n  \"parent\": \"%P\",%n  \"abbreviated_parent\": \"%p\",%n  \"refs\": \"%D\",%n  \"encoding\": \"%e\",%n  \"subject\": \"%s\",%n  \"sanitized_subject_line\": \"%f\",%n  \"body\": \"%b\",%n  \"commit_notes\": \"%N\",%n  \"verification_flag\": \"%G?\",%n  \"signer\": \"%GS\",%n  \"signer_key\": \"%GK\",%n  \"author\": {%n    \"name\": \"%aN\",%n    \"email\": \"%aE\",%n    \"date\": \"%aD\"%n  },%n  \"commiter\": {%n    \"name\": \"%cN\",%n    \"email\": \"%cE\",%n    \"date\": \"%cD\"%n  }%n},'
@@ -27,6 +29,11 @@
 	tags = tag -l
 	branches = branch --all
 	remotes = remote --verbose 
+	lb = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
+ 
+ 	# List incoming & outgoing commits (compares to remote)
+	incoming = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' ..@{u})
+	outgoing = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' @{u}..)
 	
 	# List contributors with number of commits
 	contributors = shortlog --summary --numbered
