--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,8 @@
   path = .gitconfig-rod
 [includeIf "gitdir:~/projetos/pda/"]
   path = .gitconfig-pda
+[includeIf "gitdir:~/projetos/koda/"]
+  path = .gitconfig-koda
 [safe]
 	directory = C:/Users/rodrigo/projetos/pda/Desktop.Etiquetas.Electron
 	directory = C:/Users/rodrigo.mendonca/projetos/pda/libPda
@@ -33,13 +35,12 @@
 	lb = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
  
  	# List incoming & outgoing commits (compares to remote)
-	incoming = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' ..@{u})
-	outgoing = !(git fetch --quiet && git log --pretty=format:'%C(yellow)%h %C(white)- %C(red)%an %C(white)- %C(cyan)%d%Creset %s %C(white)- %ar%Creset' @{u}..)
+	incoming = !(git fetch --quiet && git log --pretty=format:'%C(brightblue)[%h]  %C(white)- %C(white)%d%Creset %s %C(brightgreen)- %ar by %an %Creset' ..@{u})
+	outgoing = !(git fetch --quiet && git log --pretty=format:'%C(brightblue)[%h]  %C(white)- %C(white)%d%Creset %s %C(brightgreen)- %ar by %an %Creset' @{u}..)
 	
 	# List contributors with number of commits
-	contributors = shortlog --summary --numbered
-	
-	
+	contributors = shortlog --summary --numbered --all
+		
 	# List aliases.
 	aliases = config --get-regexp alias
 
