--- a/.npmrc
+++ b/.npmrc
@@ -1,10 +1,10 @@
-//registry.npmjs.org/:_authToken=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
+//registry.npmjs.org/:_authToken=
+//@koda.dev:registry=https://registry.npmjs.org/:_authToken=
 
-# msbuild_path = "C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\MSBuild.exe"
-# msbuild_path = "C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\MSBuild.exe"
 msvs_version=2022
-
 init.author.email=rodrigomendoncca@gmail.com
 init.author.name=Rodrigo Cordeiro
-init.author.url=https://rodcordeiro.com.br
+init.author.url=https://rodcordeiro.com.br/
 init.license=MIT
+node_gyp=C:\Users\rodrigo.mendonca\AppData\Roaming\npm\node_modules\node-gyp\bin\node-gyp.js
+msbuild_path=C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\MSBuild.exe
